# resume_site

./: .flake8  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
static/: material.css  material.js
static/favicon/: browserconfig.xml  site.webmanifest
templates/: about.html  chart test.html  communication.html  layout.html  projects.html
