[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = ""
authors = ["Paulo Costa <pcosta@firstrepublic.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
