[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = "Paulo's personal website"
authors = ["Paulo Costa <Paulo.S.Costa.5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
pytest = "^5.4.1"
coverage = "^5.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
flake8-annotations = "^2.1.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
